--- a/zhejiang.html
+++ b/zhejiang.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/report.css">
 </head>
 <body bgcolor="#f5feff">
-<div class="page"></div>
+<div class="page">
     <h1>大工学子“三下乡”：科技医疗舟，舟载乡村梦</h1>
     <br>
     <h2>浙江省金华市实践活动纪实</h2>
@@ -17,7 +17,7 @@
         <p>“击鼓催征稳驭舟，奋楫扬帆启新程。”为践行深入基层的思想理念，以饱满的青春热情感悟时代使命，展现新时代青年的青春力量。大连理工大学“紫韵・星火”实践团来到了浙江省兰溪市。</p>
         <p>实践团从基层着手了解当地卫生状况，到达浙江的第一站便是兰溪市石埠村。车子一驶入村里，规划整齐的房屋与平整洁净的道路便映入眼帘。下车后，实践团分为三个小组各自展开当地医疗卫生层面的调研。在村口散步的爷爷、门前聊天的奶奶们、当地超市的老板……都成为了我们的调研对象。</p>
         <p>通过热心的他们，实践团了解到当地的医疗卫生条件尚不完善，具体表现为：乡村内只有一所能够治疗常见轻微疾病的卫生所，对相对严重疾病的救治能力微弱；设施设备欠缺且医疗场地不足；卫生所对周边老人的卫生检查不足等。</p>
-        <img src="./img/zhejiang_1.jpg" alt="">
+        <img src="./img/zhejiang_page.jpg" alt="">
         <p>科技创新、科创兴国是如今大势所趋。国家科技部、财政部印发的文件中也指出，要求“聚焦企业创新能力关键环节，突出问题导向，强化精准施策”。</p>
         <p>“珍视明是一家专业从事眼科药品和眼健康消费品，集研发、生产和销售的企业。公司产品涵盖眼科药品和眼健康消费品。珍视明公司在研发上坚持自主研发， 荣获‘国家知识产权优势企业’称号，入选首批专精特新‘小巨人’企业， 拥有超过70项专利。珍视明拥有80余项产品，拥有滴眼液为主的药品批文50个。珍视明滴眼液、蒸汽眼罩、眼贴、洗眼液等产品，均占据品类市场领先地位。”珍视明的工作人员介绍道。 </p>
         <img src="./img/zhejiang_2.jpg" alt="">
